# read-king

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.trae/documents/: book-report-system-architecture.md  book-report-system-directory.md  book-report-system-prd.md  read-king-frontend-prd.md  read-king-page-design.md  read-king-technical-architecture.md
app/: main.py
app/agents/: agentic_workflow.py  schema.py  tools.py  workflow.py
app/api/: endpoints.py
app/core/: config.py
app/llm/: chat_model.py
app/rag/: chunking.py  document_loading.py  embeddings.py  structure.py  vector_store.py
app/schemas/: book.py
app/services/: book_meta_service.py  external_info_service.py  file_service.py  index_service.py  report_service.py  text_extraction.py
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: MarkdownView.tsx
frontend/src/hooks/: useInterval.ts
frontend/src/pages/: Book.tsx  (+3 more)
scripts/: e2e_workflow_test.py  verify_deepseek.py
tests/: test_chunk_preview_endpoint.py  test_chunking.py  test_embeddings.py  test_env_loader.py  test_external_info_service.py  test_index_service.py  test_langgraph_workflow.py  test_llm_chat_model.py  test_report_file_endpoints.py  test_report_service.py  test_retrieval_coverage.py  test_text_extraction.py  test_vector_store.py  test_workflow_debug_endpoints.py  test_workflow_external_reviews.py  test_workflow_messages.py  test_workflow_outline_mode.py
(+10 files in other folders)
